<resources>
    <string name="app_name" translatable="false">खिरगव्हाण ग्राम पंचायत</string>
    <string name="smart_gram_panchayat">Smart Gram Panchayat</string>
    <string name="noInternet">Please check your internet connection and try again</string>
    <string name="app_name_tab">Gram Panchayat</string>
    <string name="action_settings">Settings</string>
    <string name="noData">No data found</string>
    <string name="no_website">No website found</string>
    <string name="work_check_out">Works of the Gram Panchayat</string>
    <string name="young_business">Self Employment/Business Purpose</string>
    <string name="young_jobs">Rojgar Registration</string>
    <string name="cleaning_compleant">Cleanliness Grievance Booking</string>
    <string name="water_compleant">Grievances/Feedback Related to Drinking Water</string>
    <string name="water_compleant_booking">Drinking Water Grievance Booking</string>
    <string name="light_compleant">Grievances/Feedback Related to the Use of Light and Solar Lights</string>
    <string name="light_compleant_booking">Light and Solar Lights Grievance Booking</string>
    <string name="maintenance_compleant">Grievances/Feedback Related to Necessary Maintenance and Repairs</string>
    <string name="mentainence_compleant_booking">Maintenance and Repairs Grievance Booking</string>
    <string name="tanker_booking">Water Tanker Booking</string>
    <string name="samaj_bavan_booking">Samaj Bhavan and Bhakta Niwas Booking</string>
    <string name="construction_info">Information About Construction</string>
    <string name="construction_compleant_booking">Construction Grievance Booking</string>
    <string name="construction_compleant">Grievances/Feedback Related to Construction</string>
    <string name="schemes">Government Schemes</string>
    <string name="gallery">Photos, Video Galleries</string>
    <string name="certificate">Important Certificates and Documents Provided by Gram Panchayat</string>
    <string name="social_media">Social Media</string>
    <string name="map">Map</string>
    <string name="contact_us">Contact Us</string>
    <string name="our_gram_panchayat">Our Gram Panchayat</string>
    <string name="submit">Submit</string>
    <string name="young_business_apply">Self Employment/Business Registration</string>
    <string name="photo">Photos</string>
    <string name="vedio">Video</string>
    <string name="office_address">Office Address</string>
    <string name="name">Name</string>
    <string name="name_comp">Name *</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="mobile_no_comp">Mobile No. *</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="address_comp">Address *</string>
    <string name="business_desc">Business Description</string>
    <string name="submit_done">Submited</string>
    <string name="serverError">Oops! We\'re having technical problems. Please try again later.</string>
    <string name="submit_error">Unable to submit. Please try again later</string>
    <string name="select_type">Select Grievance Type *</string>
    <string name="select_state">Select State</string>
    <string name="select_district">Select District</string>
    <string name="select_tahsil">Select Tahsil</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="tahsil">Tahsil</string>
    <string name="weather">Weather</string>
    <string name="suggestion_tab">Smart Suggestion</string>
    <string name="e_payment">E Payment</string>
    <string name="booking">Booking</string>
    <string name="date">Date</string>
    <string name="grievance_id">Grievance Id</string>
    <string name="grievance">Grievance</string>
    <string name="comments">Comments :</string>
    <string name="before">Before</string>
    <string name="after">After</string>
    <string name="upcoming_programs">Upcoming Programs</string>
    <string name="mandi">Mandi</string>
    <string name="event_address">Address :</string>
    <string name="mandi_name">Mandi Name :</string>
    <string name="mandi_date">Date :</string>
    <string name="mandi_minimum_price">Minimum Rate</string>
    <string name="mandi_maximum_price">Maximum Rate</string>
    <string name="event_detail">Details :</string>
    <string name="classified">Classified Ads</string>
    <string name="property_tax">Property Tax</string>
    <string name="plz_ent_something">Please enter something</string>
    <string name="plz_ent_name">Please enter name</string>
    <string name="plz_ent_mobile_no">Please enter mobile number</string>
    <string name="plz_ent_valid_mobile_no">Please enter valid mobile number</string>
    <string name="plz_ent_valid_aadhar_no">Please enter valid aadhar number</string>
    <string name="plz_ent_email">Please enter email</string>
    <string name="plz_ent_valid_email">Please enter valid email</string>
    <string name="plz_ent_address">Please enter address</string>
    <string name="plz_ent_business_desc">Please enter business description</string>
    <string name="plz_ent_compleant_dtl">Please enter grievance details</string>
    <string name="plz_ent_ward_no">Please enter ward no</string>
    <string name="plz_ent_location">Please enter location</string>
    <string name="plz_ent_complent_dtl">Please enter grievance details</string>
    <string name="plz_ent_edu_quli">Please enter educational qualifications</string>
    <string name="plz_capture_img">Please capture image</string>
    <string name="plz_select_state">Please select state</string>
    <string name="plz_select_complaint_type">Please select grievance type</string>
    <string name="plz_ent_suggestion">Please enter Suggestion / Idea</string>
    <string name="plz_ent_property_no">Please enter Property Number</string>
    <string name="ward_no_comp">Ward number *</string>
    <string name="ward_no">Ward number</string>
    <string name="personal_information">Personal information :</string>
    <string name="compleant_details">Grievance / Feedback Info *</string>
    <string name="place">Location</string>
    <string name="place_comp">Location *</string>
    <string name="action_change_language">Change Language</string>
    <string name="action_about_appynitty">About Appynitty</string>
    <string name="action_rate_app">Rate this app</string>
    <string name="action_share_app">Share this app</string>
    <string name="prsonal_conatct_no">Personal contact number :</string>
    <string name="yocc_no">YOCC Number : </string>
    <string name="education_qulification">Educational Qualifications</string>
    <string name="education_qulification_comp">Educational Qualifications *</string>
    <string name="aadhar_card_no">Aadhar Card No</string>
    <string name="other_skill">Other Professional Skills if any (Pls Specify)</string>
    <string name="interested_field_in_job">Interested Fields for Job</string>
    <string name="about_yourself">About Yourself</string>
    <string name="upload_resume">Upload Resume / CV</string>
    <string name="interested_business">Interested Fields for Business/Self Employment</string>
    <string name="available_resources">Available Resources</string>
    <string name="exact_nature_of_help_required">Exact Nature of help required</string>
    <string name="captur_photo_of_resume">Capture photo of Resume / CV</string>
    <string name="or">OR</string>
    <string name="capture_photo_of_resource">Capture photo of resource</string>
    <string name="utility">Utility</string>
    <string name="website">Website</string>
    <string name="tip">Tip</string>
    <string name="complaint_booking">Grievance Booking</string>
    <string name="cleaning_info">Information About Cleanliness</string>
    <string name="water_info">Information About Drinking Water</string>
    <string name="light_info">Information About Light and Solar Lights</string>
    <string name="mantanance_info">Information About Maintenance and Repairs</string>
    <string name="suggestion">Suggestion / Idea </string>
    <string name="complent_status_tab">My Grievance Status</string>
    <string name="pending">Pending</string>
    <string name="processing">Processing</string>
    <string name="resolved">Resolved</string>
    <string name="rejected">Rejected</string>
    <string name="details">Details</string>
    <string name="property_number">Property Number</string>
    <string name="property_details">Residency Property Details</string>
    <string name="property_house_number">Property/House Number</string>
    <string name="property_assessment_date">Assessment Date. (DD-MM-YYYY)</string>
    <string name="property_form_no">Form No.</string>
    <string name="property_ward_name">Ward Name.</string>
    <string name="property_mohalla_name">Mohalla Name.</string>
    <string name="property_ownership_type">Ownership Type.</string>
    <string name="property_owner_name">Owner Name.</string>
    <string name="property_house_no">House No.</string>
    <string name="property_house_address">Property/House Address.</string>
    <string name="property_mobile_no">Mobile No.</string>
    <string name="property_rent_area">Total Rent Area in Sq Feet</string>
    <string name="property_own_area">Total Own Area in Sq Feet</string>
    <string name="property_area">Total Area Of Property in Sq Feet</string>
    <string name="property_area_rates">Area Rates</string>
    <string name="property_road_width_less">Road Width Less than</string>
    <string name="property_construction">Construction Year</string>
    <string name="property_type_construction">Type of Construction</string>
    <string name="property_arv">Annual Rental Value(ARV)</string>
    <string name="property_appreciation">Appreciation %</string>
    <string name="property_depreciation">Depreciation %</string>
    <string name="property_final_arv">Final Annual Rental Value(ARV)</string>
    <string name="property_current_year_tax">Current Year Tax</string>
    <string name="property_arrear">Arrear</string>
    <string name="property_interest">Interest</string>
    <string name="property_total_deposit">Total Deposit</string>
    <string name="property_tax_discount">10% Discount on Current Tax</string>
    <string name="property_total_tax">Total tax Due</string>
    <string name="property_online_payment">Online Payment</string>
    <string name="title_activity_ghanta_gadi_tracker">Ghanta Gadi Tracker</string>
    <string name="title_activity_league_questions">SS League 2021</string>
    <string name="contact_no_txt">Contact No. : </string>
    <string name="search_area_txt">Search Area</string>
    <string name="no_ghanta_gadi">No Active Ghanta Gadi</string>
    <string name="something_error">Something went wrong!! Please try again later. </string>
    <string name="yes_txt">Yes</string>
    <string name="no_txt">No</string>
    <string name="update_txt" translatable="false">UPDATE</string>
    <string name="no_thanks_txt" translatable="false">NO, THANKS</string>
    <string name="update_title" translatable="false">New Version Available</string>
    <string name="update_message" translatable="false">Please, update app to new version.</string>
</resources>