<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.HomeActivity">
    <item
        android:id="@+id/action_language"
        android:icon="@drawable/ic_call"
        android:orderInCategory="40"
        android:title="@string/action_change_language" />
    <item
        android:id="@+id/action_about_appynity"
        android:icon="@drawable/ic_call"
        android:orderInCategory="50"
        android:title="@string/action_about_appynitty" />
    <item
        android:id="@+id/action_rate_app"
        android:icon="@drawable/ic_call"
        android:orderInCategory="60"
        android:title="@string/action_rate_app" />
    <item
        android:id="@+id/action_share_app"
        android:icon="@drawable/ic_call"
        android:orderInCategory="70"
        android:title="@string/action_share_app" />
</menu>
