<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_Menu"
        android:icon="@drawable/icn_three_dots"
        android:orderInCategory="30"
        android:title="Menu"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_language"
                android:icon="@drawable/ic_language_change"
                android:orderInCategory="40"
                android:title="@string/action_change_language" />
            <item
                android:id="@+id/action_rate"
                android:icon="@drawable/icn_rate_white"
                android:orderInCategory="50"
                android:title="@string/action_rate_app" />
            <item
                android:id="@+id/action_share_app"
                android:icon="@drawable/icn_share_white"
                android:orderInCategory="60"
                android:title="@string/action_share_app" />
            <item
                android:id="@+id/action_about_appynitty"
                android:icon="@drawable/icn_appynitty_white"
                android:orderInCategory="70"
                android:title="@string/action_about_appynitty" />
        </menu>
    </item>
</menu>
