<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/padding_margin_layout"
            android:orientation="vertical"
            android:padding="@dimen/padding_margin_layout">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/fb_name_et"
                    style="@style/MyEditTextStyle"
                    android:hint="@string/name"
                    android:inputType="textCapWords" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/fb_number_et"
                    style="@style/MyEditTextStyle"
                    android:hint="@string/mobile_no"
                    android:inputType="number"
                    android:maxLength="10" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/fb_email_et"
                    style="@style/MyEditTextStyle"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/fb_suggesstion_et"
                    style="@style/MyEditTextStyle"
                    android:hint="@string/suggestion"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/fb_address_et"
                    style="@style/MyEditTextStyle"
                    android:hint="@string/address_comp"
                    android:inputType="textCapSentences" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/padding_margin_layout">

        <Button
            android:id="@+id/fb_save_btn"
            style="@style/MyButtonStyle"
            android:text="@string/submit" />

    </LinearLayout>
</RelativeLayout>