<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="Search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_Menu"
        android:icon="@drawable/icn_three_dots"
        android:orderInCategory="30"
        android:title="Menu"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_language"
                android:icon="@drawable/ic_language_change"
                android:orderInCategory="40"
                android:title="@string/action_change_language" />
            <item
                android:id="@+id/action_rate"
                android:icon="@drawable/icn_rate_white"
                android:orderInCategory="50"
                android:title="@string/action_rate_app" />
            <item
                android:id="@+id/action_share_app"
                android:icon="@drawable/icn_share_white"
                android:orderInCategory="60"
                android:title="@string/action_share_app" />
            <item
                android:id="@+id/action_about_appynitty"
                android:icon="@drawable/icn_appynitty_white"
                android:orderInCategory="70"
                android:title="@string/action_about_appynitty" />
        </menu>
    </item>
</menu>
