<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/tb_yocc_no_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_margin_layout"
                android:orientation="vertical"
                android:padding="@dimen/padding_margin_layout">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prsonal_conatct_no"
                    android:textSize="@dimen/primery_text_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yocc_no"
                        android:textSize="@dimen/primery_text_size" />

                    <TextView
                        android:id="@+id/tb_yocc_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/primery_text_size" />

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/title_hint_text_color" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/padding_margin_layout"
            android:orientation="vertical"
            android:padding="@dimen/padding_margin_layout">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/tb_name_et"
                    style="@style/MyEditTextStyle"
                    android:hint="@string/name_comp"
                    android:inputType="textCapWords" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/tb_number_et"
                    style="@style/MyEditTextStyle"
                    android:hint="@string/mobile_no_comp"
                    android:inputType="number"
                    android:maxLength="10" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/tb_prabhag_kramak_et"
                    style="@style/MyEditTextStyle"
                    android:hint="@string/ward_no"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/tb_address_et"
                    style="@style/MyEditTextStyle"
                    android:hint="@string/address_comp"
                    android:inputType="textCapSentences" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/padding_margin_layout">

        <Button
            android:id="@+id/tb_save_btn"
            style="@style/MyButtonStyle"
            android:text="@string/submit" />

    </LinearLayout>
</RelativeLayout>