<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_margin_layout_double">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_margin_layout_double">

        <EditText
            android:id="@+id/ss_user_name"
            style="@style/MyEditTextStyle"
            android:hint="@string/name_comp"
            android:inputType="textCapWords" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_margin_layout_double"
        android:layout_marginTop="@dimen/padding_margin_layout_double">

        <EditText
            android:id="@+id/ss_user_contact"
            style="@style/MyEditTextStyle"
            android:hint="@string/mobile_no_comp"
            android:inputType="number"
            android:maxLength="10" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/ss_details_save_btn"
        style="@style/MyButtonStyle"
        android:text="@string/submit" />

</LinearLayout>
