<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.PropertyTaxFragment">

    <androidx.cardview.widget.CardView
        style="@style/MyCardView"
        app:cardBackgroundColor="@color/event_date_background_color"
        app:cardCornerRadius="@dimen/cardview_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/MyTextViewStyle"
                android:padding="@dimen/padding_margin_layout"
                android:text="@string/property_number"
                android:textColor="@color/button_text_color"
                android:textSize="@dimen/button_text_size"/>

            <EditText
                android:id="@+id/propertyNumber"
                style="@style/MyEditTextStyle"
                android:layout_margin="@dimen/padding_margin_layout_double"
                android:hint="@string/plz_ent_property_no"
                android:textColorHint="@color/button_text_color"
                android:textColor="@color/button_text_color"/>

            <Button
                android:id="@+id/getPropertyTaxes"
                style="@style/MyButtonStyle"
                android:text="@string/submit"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorPrimaryDark"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>